区分组件模式和非组件模式

--- a/model_main/src/main/AndroidManifest.xml
+++ b/model_main/src/main/AndroidManifest.xml
@@ -3,7 +3,15 @@
 
     <application
         android:theme="@style/AppTheme">
-        <activity android:name=".MainAct" />
+        <activity
+            android:name="com.john.mainmodel.MainAct"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
