--- a/model_app/build.gradle
+++ b/model_app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':lib_common')
+    annotationProcessor 'com.github.mzule.activityrouter:compiler:1.1.7'
     if(!isModule.toBoolean()){
         implementation project(':model_main')
         implementation project(':model_list')
