--- a/model_list/build.gradle
+++ b/model_list/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':lib_common')
+    annotationProcessor 'com.github.mzule.activityrouter:compiler:1.1.7'
 }
