--- a/model_more/build.gradle
+++ b/model_more/build.gradle
@@ -38,7 +38,9 @@ android {
             }
         }
     }
-
+//设置了resourcePrefix值后，所有的资源名必须以指定的字符串做前缀，否则会报错。
+    //但是resourcePrefix这个值只能限定xml里面的资源，并不能限定图片资源，所有图片资源仍然需要手动去修改资源名。
+    //resourcePrefix "main_" 暂时不处理
 }
 
 dependencies {
