将启动也放到main组件

--- a/model_main/src/main/AndroidManifest.xml
+++ b/model_main/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TestAct"/>
-
+        <activity android:name=".SplashAct"/>
     </application>
 
 
