--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,33 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext{
+    //Versions
+    versionCode = 1
+    versionName = '1.0'
+    minSdkVersion = 15
+    targetSdkVersion= 28
+    compileSdkVersion= 28
+    //depends Version
+    supportAppcompat='28.0.0'
+    junit='4.12'
+    runner='1.0.2'
+    espressoCore='3.0.2'
+    //Retrofit
+    retrofit='2.4.0'
+    gson='2.8.2'
+    adapterRxjava2='2.4.0'
+    rxandroid='2.1.0'
+    rxjava='2.2.0'
+    rxlifecycle='2.2.2'
+    rxlifecycleComponents='2.2.0'
+    butterknife='8.8.1'
+    butterknifeCompiler='8.8.1'
+    leakcanaryAndroid='1.5.4'
+    leakcanaryAndroidNOp='1.5.4'
+    activityAouter='1.2.2'
+    activityrouterCompiler='1.1.7'
+
+
+}
