--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.ext.compileSdkVersion
 
 
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -26,28 +26,27 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    api "com.android.support:appcompat-v7:$rootProject.ext.supportAppcompat"
+    testImplementation "junit:junit:$rootProject.ext.junit"
+    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.runner"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoCore"
     //暂时没有处理第三方库重复依赖support库的问题
     //Network
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    api "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofit"
+    api "com.google.code.gson:gson:$rootProject.ext.gson"
+    api "com.squareup.retrofit2:adapter-rxjava2:$rootProject.ext.adapterRxjava2"
     //RxJava2
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    api "io.reactivex.rxjava2:rxandroid:$rootProject.ext.rxandroid"
+    api "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxjava"
     //RxLifecycle2
-    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.0'
+    api "com.trello.rxlifecycle2:rxlifecycle:$rootProject.ext.rxlifecycle"
+    api "com.trello.rxlifecycle2:rxlifecycle-components:$rootProject.ext.rxlifecycleComponents"
     //ButterKnife
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    api "com.jakewharton:butterknife:$rootProject.ext.butterknife"
     //leakCanary
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    debugApi "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanaryAndroid"
+    releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakcanaryAndroidNOp"
     //ARouter 后期改为阿里的router实现跨组件通信
-    api 'com.github.mzule.activityrouter:activityrouter:1.2.2'
+    api "com.github.mzule.activityrouter:activityrouter:$rootProject.ext.activityAouter"
 
 }
