--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
+#这个值一般跟你的AndroidStudio版本号一致
 localGradlePluginVersion=3.1.2
 
 #定义是否为组件开发模式 每次更改“isModule”的值后，需要点击 "Sync Project" 按钮
