--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,6 @@ org.gradle.jvmargs=-Xmx1536m
 localGradlePluginVersion=3.1.2
 
 #定义是否为组件开发模式 每次更改“isModule”的值后，需要点击 "Sync Project" 按钮
-#isModule=false
-isModule=true
+isModule=false
+#isModule=true
 
