--- a/model_main/build.gradle
+++ b/model_main/build.gradle
@@ -16,7 +16,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        //阿里路由的配置
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
 
     buildTypes {
@@ -39,9 +44,9 @@ android {
             }
         }
     }
-        //设置了resourcePrefix值后，所有的资源名必须以指定的字符串做前缀，否则会报错。
-        //但是resourcePrefix这个值只能限定xml里面的资源，并不能限定图片资源，所有图片资源仍然需要手动去修改资源名。
-        //resourcePrefix "main_" 暂时不处理
+    //设置了resourcePrefix值后，所有的资源名必须以指定的字符串做前缀，否则会报错。
+    //但是resourcePrefix这个值只能限定xml里面的资源，并不能限定图片资源，所有图片资源仍然需要手动去修改资源名。
+    //resourcePrefix "main_" 暂时不处理
 
 }
 
@@ -50,4 +55,5 @@ dependencies {
     implementation project(':lib_common')
     annotationProcessor "com.github.mzule.activityrouter:compiler:$rootProject.ext.activityrouterCompiler"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeCompiler"
+    annotationProcessor "com.alibaba:arouter-compiler:$rootProject.ext.alibabaArouterCompiler"
 }
