--- a/model_app/build.gradle
+++ b/model_app/build.gradle
@@ -9,6 +9,12 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        //阿里路由的配置
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ AROUTER_MODULE_NAME : project.getName() ]
+            }
+        }
     }
     buildTypes {
         release {
@@ -23,6 +29,7 @@ dependencies {
     implementation project(':lib_common')
     annotationProcessor "com.github.mzule.activityrouter:compiler:$rootProject.ext.activityrouterCompiler"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeCompiler"
+    annotationProcessor "com.alibaba:arouter-compiler:$rootProject.ext.alibabaArouterCompiler"
     if(!isModule.toBoolean()){
         implementation project(':model_main')
         implementation project(':model_list')
