--- a/model_more/build.gradle
+++ b/model_more/build.gradle
@@ -15,7 +15,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        //阿里路由的配置
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ AROUTER_MODULE_NAME : project.getName() ]
+            }
+        }
     }
 
     buildTypes {
@@ -48,4 +53,5 @@ dependencies {
     implementation project(':lib_common')
     annotationProcessor "com.github.mzule.activityrouter:compiler:$rootProject.ext.activityrouterCompiler"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeCompiler"
+    annotationProcessor "com.alibaba:arouter-compiler:$rootProject.ext.alibabaArouterCompiler"
 }
