--- a/model_app/src/main/AndroidManifest.xml
+++ b/model_app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:name="com.john.componentization_demo.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="主组件"
+        android:label="主工程"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
