--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -52,4 +52,5 @@ dependencies {
         exclude module: 'support-v4'//根据组件名排除
         exclude group: 'android.support.v4'//根据包名排除
     }
+    api 'com.github.bumptech.glide:glide:3.7.0'
 }
